# VeOmni

./: .env.local  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.py  train.sh
.github/workflows/: pre-commit.yml
configs/dit/: flux_lora.yaml  flux_sft.yaml  wan_lora.yaml  wan_sft.yaml
configs/model_configs/deepseek/: DeepseekV2_236B.json  DeepseekV3_16B.json  DeepseekV3_671B.json
configs/model_configs/flux/: flux.json
configs/model_configs/qwen/: Qwen2-0.5B.json  Qwen2-72B.json  Qwen2-7B.json
configs/model_configs/wan/: wani2v_14b.json  want2v_1.3b.json  want2v_14b.json
configs/multimodal/decoder/movqgan/: fsdp2_align_qwenvit_imagenet.yaml
configs/multimodal/omni/: seed_omni.yaml
configs/multimodal/qwen2_vl/: qwen2_vl.yaml
configs/pretrain/: deepseek.yaml  llama3.yaml  qwen2_5.yaml  qwen3-moe.yaml  seed_oss.yaml
configs/sft/: deepseek_sft.yaml
docker/: Dockerfile  Dockerfile.cu132  Dockerfile_ngc.cu132
docs/: Makefile  README.md  conf.py  index.rst  requirements-docs.txt
docs/config/: config.md
docs/examples/: qwen2vl.rst  qwen3_moe.md
docs/start/: best_practice.md  start.rst
docs/tutorials/: model_loader.md  ulysses.md
scripts/: download_hf_data.py  download_hf_model.py  mereg_dcp_to_hf.py
scripts/deepseek_v3/: fp8_cast_bf16.py  kernel.py
scripts/moe_ckpt_merge/: moe_merge.py
tasks/: infer.py  train_torch.py
tasks/omni/: infer_omni_model.py  infer_qwen2_vl.py  train_flux.py  train_omni_model.py  train_qwen2_5_vl.py  train_qwen2_vl.py  train_wan.py
tests/ulysses/: attention.py  normalization.py  test_all_gather.py  test_async_ulysses.py  test_ulysses.py  utils.py
tests/utils/: test_checkpointer.py  test_helper.py  test_model_loader.py  test_npu_setup.py
veomni/: __init__.py
veomni/checkpoint/: __init__.py  checkpointer.py  extension.py  format_utils.py
veomni/data/: __init__.py  batching_strategy.py  chat_template.py  constants.py  data_collator.py  data_loader.py  data_transform.py  dataset.py  dynamic_batching.py
veomni/data/diffusion/: data_loader.py  dataset.py
veomni/data/diffusion/preprocess/: origin_dataset.py
veomni/data/multimodal/: data_collator.py  multimodal_chat_template.py  multimodal_transform.py  preprocess.py
veomni/distributed/: checkpoint.py  initialize.py  offloading.py  parallel_plan.py  parallel_state.py  torch_parallelize.py  utils.py  vescale_parallelize.py  vescale_plan.py
veomni/distributed/fsdp/: __init__.py  clip_grad_norm.py  extension.py  initialize.py
veomni/distributed/moe/: __init__.py  comm.py  fused_moe.py  moe_layer.py  moe_utils.py
veomni/distributed/sequence_parallel/: __init__.py  async_ulysses.py  async_ulysses_dit.py  comm.py  data.py  loss.py  ulysses.py  utils.py
veomni/models/: __init__.py  auto.py  loader.py  modeling_layers.py  module_utils.py  registry.py
veomni/models/seed_omni/: __init__.py  auto.py  configuration_seed_omni.py  modeling_seed_omni.py  processing_seed_omni.py  projector.py
veomni/models/seed_omni/decoder/: __init__.py  base.py
veomni/models/seed_omni/decoder/movqgan/: __init__.py  configuration_movqgan.py  modeling_movqgan.py  processing_movqgan.py
veomni/models/seed_omni/encoder/: __init__.py  base.py
veomni/models/seed_omni/encoder/qwen2_vl_vision_model/: __init__.py  configuration_qwen2_vl_vision_model.py  modeling_qwen2_vl_vision_model.py  processing_qwen2_vl_vision_model.py
veomni/models/seed_omni/foundation/: __init__.py  base.py
veomni/models/seed_omni/foundation/qwen2_vl_foundation/: __init__.py  configuration_qwen2_vl_foundation.py  modeling_qwen2_vl_foundation.py
veomni/models/transformers/: __init__.py
veomni/models/transformers/deepseek_v3/: __init__.py  configuration_deepseek.py  modeling_deepseek.py  parallel_plan.py
veomni/models/transformers/flux/: __init__.py  config_flux.py  encode_flux.py  modeling_flux.py  utils_flux.py
veomni/models/transformers/llama/: modeling_llama.py
veomni/models/transformers/movqgan/: __init__.py  configuration_movqgan.py  modeling_movqgan.py  processing_movqgan.py
veomni/models/transformers/qwen2/: modeling_qwen2.py
veomni/models/transformers/qwen2_5vl/: modeling_qwen2_5_vl.py
veomni/models/transformers/qwen2_vl/: modeling_qwen2_vl.py
veomni/models/transformers/qwen3/: modeling_qwen3.py
veomni/models/transformers/qwen3_moe/: configuration_qwen3_moe.py  modeling_qwen3_moe.py  parallel_plan.py
veomni/models/transformers/seed_oss/: modeling_seed_oss.py
veomni/models/transformers/wan/: __init__.py  config_wan.py  modeling_wan.py
veomni/ops/: __init__.py  attention.py  fused_moe.py  loss.py
veomni/ops/dit/rope_wan/: rotary.py
veomni/ops/group_gemm/kernel/: group_gemm.py  moe.py
veomni/ops/group_gemm/kernel/triton_utils/: activation.py  memory.py  utils.py
veomni/ops/group_gemm/utils/: benchmark_utils.py  config.py  device.py  envvars.py  kernel.py  path.py  pretuned.py
veomni/optim/: __init__.py  lr_scheduler.py  optimizer.py
veomni/schedulers/: flow_match.py
veomni/utils/: arguments.py  count_flops.py  dist_utils.py  dit_utils.py  helper.py  import_utils.py  logging.py  lora_utils.py  model_utils.py  recompute_utils.py  seqlen_pos_transform_utils.py
